fix gradle buil, fix proxy endpoint